updates on contact and about sections

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -38,7 +39,9 @@
             </nav>
             <!-- Page content-->
             <section class="py-5">
-                <div class="container px-5">
+                <div class="container px-5 pb-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-xxl-5">
                     <!-- Contact form-->
                     <div class="bg-light rounded-4 py-5 px-4 px-md-5">
                         <div class="text-center mb-5">
@@ -55,18 +58,7 @@
                                 <!-- https://startbootstrap.com/solution/contact-forms-->
                                 <!-- to get an API token!-->
                                   <!-- Contact Info -->
-                  <footer class="bg-light py-4 mt-auto" style="background-color: #f8f9fa">
-            <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="fs-5">
-                        <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
-                                    <a href="https://linkedin.com/in/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a href="https://github.com/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
-                        </div>
-                 </div>
-            </div>
-        </footer>
+                  
 
                                 <form id="contactForm"   action="https://formspree.io/f/mkgpleob" method="POST">
   <!-- Name input -->
@@ -114,6 +106,27 @@
     <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Send Message</button>
   </div>
 </form>
+</div>
+
+                          <div class="col-xxl-7">
+                            <div class="d-flex justify-content-center mt-5 mt-xxl-0">
+                               <p class="lead fw-light mb-4">Email: 
+                                <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i nesibe.pekcakar@gmail.com></i>.</p>
+                               <p class="lead fw-light mb-4">Phone: +90 538 470 9269</p>
+                               <p class="lead fw-light mb-4">Linkedin:
+                                <a href="https://linkedin.com/in/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="in/nesibepekcakar"></i></a>.
+                               </p>
+                               <p class="lead fw-light mb-4">Github :
+<a href="https://github.com/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="bi bi-github", nesibepekcakar></i></a>                        </div>
+                               </p>
+
+
+                            </div>
+
+                          </div>
+
+
+
 
                             </div>
                         </div>
