--- a/index.html
+++ b/index.html
@@ -199,12 +199,9 @@
 
 </p>
 <p class="text-muted">
-At my core, I’m disciplined, curious, and committed to clarity, quality, and thoughtful execution in every project I build.
-I approach problems with an organized mindset, always aiming to deliver solutions that are both technically robust and genuinely useful.</p>
-<p class="text-muted">
-While I enjoy working with AI-powered software, my general goal is to develop reliable, user-oriented software products across multiple domains.
-I am at heart driven by solving real-world problems, understanding system behavior, and building technologies that truly make a difference.
-
+I value discipline, curiousty,being committed to clarity and quality.
+My goal is to develop reliable, user-oriented software products across multiple domains.
+I'm driven by solving real-world problems and building technologies that truly make a difference.
 </p>
                             </div>
                         </div>
