--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -67,8 +68,17 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
-                                <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">Hi, I'm Nesibe Nur Pekçakar.</p>
+                                <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Nesibe</span></h2>
+                                <p class="lead fw-light mb-4">I’ve always been drawn to intelligent systems. Long before studying engineering, I was immersed in science-fiction books filled with futuristic technologies and AI—ideas that made me genuinely excited about the world of software. When I began coding, I realized it was exactly what I enjoyed: solving problems, thinking analytically, and building something meaningful from scratch.
+
+I graduated with several academic achievements: a full scholarship, Erasmus funding, and a merit award given to only a few students each year. These accomplishments were the result of years of discipline, curiosity, and a deep love for learning. I have always believed that whatever field I choose, I can succeed through intelligence, dedication, and consistent hard work.
+
+I enjoy approaching projects from both a technical and user-centered perspective—understanding what a system needs to do, researching the right tools, building a solid foundation, and expanding it feature by feature. If something can be improved, I don’t hesitate to say it. Quality and efficiency matter to me.
+
+Although I can be reserved during interviews or high-pressure situations, I excel once I begin working. My strengths appear in action: how I think, how I solve problems, and how deeply I commit to the work in front of me.
+
+In the near future, I aim to specialize in developing software enriched with AI—tools and applications that make life easier, smarter, and more efficient. If there is one message I would want visitors to take away, it’s this:
+I am someone who loves solving problems, learning fast, and building technology that truly works.</p>
 <p class="text-muted">
   ....
 </p>
