--- a/about.html
+++ b/about.html
@@ -38,19 +38,13 @@
             </nav>
             <!-- Header-->
             <header class="py-5">
+                div class="text-center mb-5">
+                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">About  Nesibe</span></h1>
+                </div>
                 <div class="container px-5 pb-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-xxl-5">
                             <!-- Header text content-->
-                            <div class="text-center text-xxl-start">
-<div class="badge bg-gradient-primary-to-secondary text-white mb-4">
-  <div class="text-uppercase">
-    <span>...</span>
-
-</div>
-
-
-                            </div>
                         </div>
                         <div class="col-xxl-7">
                             <!-- Header profile picture-->
@@ -68,7 +62,6 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
-                                <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Nesibe</span></h2>
                                 <p class="lead fw-light mb-4">I’ve always been drawn to intelligent systems. Long before studying engineering, I was immersed in science-fiction books filled with futuristic technologies and AI—ideas that made me genuinely excited about the world of software. When I began coding, I realized it was exactly what I enjoyed: solving problems, thinking analytically, and building something meaningful from scratch.
 
 I graduated with several academic achievements: a full scholarship, Erasmus funding, and a merit award given to only a few students each year. These accomplishments were the result of years of discipline, curiosity, and a deep love for learning. I have always believed that whatever field I choose, I can succeed through intelligence, dedication, and consistent hard work.
