--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <section class="py-5">
                 <div class="container px-5 pb-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-xxl-5">
+                        <div class="col-xxl-7">
                     <!-- Contact form-->
                     <div class="bg-light rounded-4 py-5 px-4 px-md-5">
                         <div class="text-center mb-5">
@@ -118,16 +118,16 @@
 
                             </div>
                         </div>
-                        <div class="col-xxl-7">
+                        <div class="col-xxl-5">
                             <div class="d-flex justify-content-center mt-5 mt-xxl-0">
-                               <p class="lead fw-light mb-4">Email: 
-                                <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i nesibe.pekcakar@gmail.com></i>.</p>
+                               <p class="lead fw-light mb-4">Email: nesibe.pekcakar@gmail.com
+                                <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"></p>
                                <p class="lead fw-light mb-4">Phone: +90 538 470 9269</p>
-                               <p class="lead fw-light mb-4">Linkedin:
-                                <a href="https://linkedin.com/in/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="in/nesibepekcakar"></i></a>.
+                               <p class="lead fw-light mb-4">Linkedin: in/nesibepekcakar
+                                <a href="https://linkedin.com/in/nesibepekcakar" target="_blank"class="text-gradient" href="#!"></a>
                                </p>
-                               <p class="lead fw-light mb-4">Github :
-<a href="https://github.com/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="bi bi-github", nesibepekcakar></i></a>                        </div>
+                               <p class="lead fw-light mb-4">Github : github.com/nesibepekcakar
+<a href="https://github.com/nesibepekcakar" target="_blank"class="text-gradient" href="#!"></i></a>                        </div>
                                </p>
 
 
