--- a/about.html
+++ b/about.html
@@ -38,8 +38,9 @@
             </nav>
             <!-- Header-->
             <header class="py-5">
-                div class="text-center mb-5">
+                <div class="text-center mb-5">
                     <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">About  Nesibe</span></h1>
+
                 </div>
                 <div class="container px-5 pb-5">
                     <div class="row gx-5 align-items-center">
