--- a/contact.html
+++ b/contact.html
@@ -1,178 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Nesibe Nur Pekçakar - Contact Me</title>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="Contact Page" />
+        <meta name="author" content="Your Name" />
+        <title>Contact</title>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
 
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <body id="page-top">
 
-    <!-- Core Theme CSS -->
-    <link href="css/styles.css" rel="stylesheet" />
-</head>
-
-<body class="d-flex flex-column">
-<main class="flex-shrink-0">
-
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light py-2 bg-light navbar-gradient">
-        <div class="container px-5">
-            <a class="navbar-brand" href="index.html">
-                <span class="fw-bolder text-primary">Nesibe Nur Pekçakar</span>
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                    <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-                </ul>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
+            <div class="container px-5">
+                <a class="navbar-brand fw-bold" href="index.html">Your Name</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="projects.html">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    <!-- Page Content -->
-    <section class="py-5">
-        <div class="container px-5 pb-5">
-            <div class="row gx-5 align-items-start">
+        <!-- Contact Section-->
+        <section class="py-5 mt-5">
+            <div class="container px-5 my-5">
 
-                <!-- LEFT SIDE – CONTACT FORM -->
-                <div class="col-xxl-7">
+                <!-- CONTACT INFO CARD -->
+                <div class="card shadow border-0 mb-5">
+                    <div class="card-body p-4">
+                        <h2 class="text-gradient d-inline">Contact Information</h2>
+                        <p class="mb-4">Feel free to reach out through any of the channels below.</p>
 
-                    <div class="bg-light rounded-4 py-5 px-4 px-md-5">
-                        <div class="text-center mb-5">
-                            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3">
-                                <i class="bi bi-send-fill"></i>
-                            </div>
-                            <h1 class="fw-bolder">Let's get in touch</h1>
-                        </div>
-
-                        <div class="row gx-5 justify-content-center">
-                            <div class="col-lg-8 col-xl-6">
-
-                                <form id="contactForm" action="https://formspree.io/f/mkgpleob" method="POST">
-
-                                    <!-- Name -->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" id="name" name="name" type="text" required />
-                                        <label for="name">Full name</label>
-                                    </div>
-
-                                    <!-- Email -->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" id="email" name="email" type="email" required />
-                                        <label for="email">Email address</label>
-                                    </div>
-
-                                    <!-- Phone -->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" id="phone" name="phone" type="tel" />
-                                        <label for="phone">Phone number</label>
-                                    </div>
-
-                                    <!-- Message -->
-                                    <div class="form-floating mb-3">
-                                        <textarea class="form-control" id="message" name="message"
-                                                  style="height: 10rem" required></textarea>
-                                        <label for="message">Message</label>
-                                    </div>
-
-                                    <!-- Success/Error messages -->
-                                    <div class="d-none" id="submitSuccessMessage">
-                                        <div class="text-center mb-3 fw-bolder">Message sent successfully!</div>
-                                    </div>
-
-                                    <div class="d-none" id="submitErrorMessage">
-                                        <div class="text-center text-danger mb-3">Error! Please try again.</div>
-                                    </div>
-
-                                    <!-- Submit -->
-                                    <div class="d-grid">
-                                        <button class="btn btn-primary btn-lg" id="submitButton" type="submit">
-                                            Send Message
-                                        </button>
-                                    </div>
-
-                                </form>
-
-                            </div>
-                        </div>
+                        <ul class="list-unstyled mb-0">
+                            <li class="mb-3">
+                                <strong>Email:</strong>
+                                <a href="mailto:youremail@email.com">youremail@email.com</a>
+                            </li>
+                            <li class="mb-3">
+                                <strong>LinkedIn:</strong>
+                                <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a>
+                            </li>
+                            <li class="mb-3">
+                                <strong>GitHub:</strong>
+                                <a href="https://github.com/yourusername">github.com/yourusername</a>
+                            </li>
+                        </ul>
                     </div>
-
                 </div>
 
-                <!-- RIGHT SIDE – CONTACT INFO -->
-                <div class="col-xxl-5 mt-5 mt-xxl-0">
+                <!-- CONTACT FORM CARD -->
+                <div class="card shadow border-0">
+                    <div class="card-body p-4">
 
-                    <div class="d-flex flex-column justify-content-start fs-5">
+                        <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
 
-                        <p class="lead fw-light mb-3">
-                            <strong>Email:</strong>
-                            <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient">
-                                nesibe.pekcakar@gmail.com
-                            </a>
-                        </p>
+                            <!-- Name -->
+                            <div class="mb-3">
+                                <label class="form-label" for="name">Full Name</label>
+                                <input class="form-control" id="name" name="name" type="text" required />
+                            </div>
 
-                        <p class="lead fw-light mb-3">
-                            <strong>Phone:</strong> +90 538 470 9269
-                        </p>
+                            <!-- Email -->
+                            <div class="mb-3">
+                                <label class="form-label" for="emailAddress">Email Address</label>
+                                <input class="form-control" id="emailAddress" name="email" type="email" required />
+                            </div>
 
-                        <p class="lead fw-light mb-3">
-                            <strong>LinkedIn:</strong>
-                            <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient">
-                                linkedin.com/in/nesibepekcakar
-                            </a>
-                        </p>
+                            <!-- Message -->
+                            <div class="mb-3">
+                                <label class="form-label" for="message">Message</label>
+                                <textarea class="form-control" id="message" name="message" style="height: 10rem;" required></textarea>
+                            </div>
 
-                        <p class="lead fw-light mb-3">
-                            <strong>GitHub:</strong>
-                            <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient">
-                                github.com/nesibepekcakar
-                            </a>
-                        </p>
+                            <!-- Submit -->
+                            <div class="d-grid">
+                                <button class="btn btn-primary btn-lg" type="submit">Send</button>
+                            </div>
+
+                        </form>
 
                     </div>
-
                 </div>
 
             </div>
-        </div>
-    </section>
+        </section>
 
-</main>
+        <!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container px-5">
+                <p class="m-0 text-center text-white">
+                    Copyright &copy; Your Name 2025
+                </p>
+            </div>
+        </footer>
 
-<!-- FOOTER -->
-<footer class="bg-white py-4 mt-auto">
-    <div class="container px-5">
-        <div class="d-flex justify-content-center fs-2 gap-4">
-            <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient"><i class="bi bi-envelope"></i></a>
-            <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient"><i class="bi bi-linkedin"></i></a>
-            <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient"><i class="bi bi-github"></i></a>
-        </div>
-    </div>
-</footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
 
-<!-- SB Forms -->
-<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-
-</body>
+    </body>
 </html>
