--- a/contact.html
+++ b/contact.html
@@ -119,16 +119,46 @@
                             </div>
                         </div>
                         <div class="col-xxl-5">
-                            <div class="d-flex justify-content-center mt-5 mt-xxl-0">
-                               <p class="lead fw-light mb-4">Email: nesibe.pekcakar@gmail.com
-                                <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"></p>
-                               <p class="lead fw-light mb-4">Phone: +90 538 470 9269</p>
-                               <p class="lead fw-light mb-4">Linkedin: in/nesibepekcakar
-                                <a href="https://linkedin.com/in/nesibepekcakar" target="_blank"class="text-gradient" href="#!"></a>
-                               </p>
-                               <p class="lead fw-light mb-4">Github : github.com/nesibepekcakar
-<a href="https://github.com/nesibepekcakar" target="_blank"class="text-gradient" href="#!"></i></a>                        </div>
-                               </p>
+                            <div class="col-xxl-5 mt-5 mt-xxl-0">
+    <div class="contact-info p-4 rounded-4">
+
+        <h3 class="fw-bold mb-4 text-gradient">Contact Details</h3>
+
+        <p class="lead fw-light mb-3 d-flex align-items-center">
+            <i class="bi bi-envelope me-2 text-gradient fs-4"></i>
+            <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient">
+                nesibe.pekcakar@gmail.com
+            </a>
+        </p>
+
+        <p class="lead fw-light mb-3 d-flex align-items-center">
+            <i class="bi bi-telephone me-2 text-gradient fs-4"></i>
+            +90 538 470 9269
+        </p>
+
+        <p class="lead fw-light mb-3 d-flex align-items-center">
+            <i class="bi bi-linkedin me-2 text-gradient fs-4"></i>
+            <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient">
+                linkedin.com/in/nesibepekcakar
+            </a>
+        </p>
+
+        <p class="lead fw-light mb-3 d-flex align-items-center">
+            <i class="bi bi-github me-2 text-gradient fs-4"></i>
+            <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient">
+                github.com/nesibepekcakar
+            </a>
+        </p>
+
+        <p class="lead fw-light mb-3 d-flex align-items-center">
+            <i class="bi bi-hdd-network me-2 text-gradient fs-4"></i>
+            <a href="https://huggingface.co/nesibepekcakar" target="_blank" class="text-gradient">
+                huggingface.co/nesibepekcakar
+            </a>
+        </p>
+
+    </div>
+</div>
 
 
                             </div>
