contact update new

--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
             <!-- Page content-->
              
             <section class="py-5">
-                <div class="container px-5 pb-5">
-                    <div class="row gx-5 align-items-center">
-                        <div class="col-xxl-7">
+               <div class="container px-5 pb-5">
+        <div class="row gx-5 align-items-center">
+            <div class="col-xxl-9">
                     <!-- Contact form-->
                     <div class="bg-light rounded-4 py-5 px-4 px-md-5">
                         <div class="text-center mb-5">
@@ -118,40 +118,40 @@
 
                             </div>
                         </div>
-                        <div class="col-xxl-5">
-                            <div class="col-xxl-5 mt-5 mt-xxl-0">
-    <div class="contact-info p-4 rounded-4">
+                        <div class="col-xxl-3"> 
+                <div class="mt-5 mt-xxl-0">
+                    <div class="contact-info p-4 rounded-4 **bg-light**">
 
-        <h3 class="fw-bold mb-4 text-gradient">Contact Details</h3>
+        <h3 class="fw-bold mb-3 text-gradient">Contact Details</h3>
 
-        <p class="lead fw-light mb-3 d-flex align-items-center">
-            <i class="bi bi-envelope me-2 text-gradient fs-4"></i>
+        <p class="lead fw-light mb-2 d-flex align-items-center small">
+            <i class="bi bi-envelope me-2 text-gradient fs-5"></i>
             <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient">
                 nesibe.pekcakar@gmail.com
             </a>
         </p>
 
-        <p class="lead fw-light mb-3 d-flex align-items-center">
-            <i class="bi bi-telephone me-2 text-gradient fs-4"></i>
-            +90 538 470 9269
+        <p class="lead fw-light mb-2 d-flex align-items-center small">
+            <i class="bi bi-telephone me-2 text-gradient fs-5"></i>
+            +905384709269
         </p>
 
-        <p class="lead fw-light mb-3 d-flex align-items-center">
-            <i class="bi bi-linkedin me-2 text-gradient fs-4"></i>
+        <p class="lead fw-light mb-2 d-flex align-items-center small">
+            <i class="bi bi-linkedin me-2 text-gradient fs-5"></i>
             <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient">
                 linkedin.com/in/nesibepekcakar
             </a>
         </p>
 
-        <p class="lead fw-light mb-3 d-flex align-items-center">
-            <i class="bi bi-github me-2 text-gradient fs-4"></i>
+        <p class="lead fw-light mb-2 d-flex align-items-center small">
+            <i class="bi bi-github me-2 text-gradient fs-5"></i>
             <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient">
                 github.com/nesibepekcakar
             </a>
         </p>
 
-        <p class="lead fw-light mb-3 d-flex align-items-center">
-            <i class="bi bi-hdd-network me-2 text-gradient fs-4"></i>
+        <p class="lead fw-light mb-2 d-flex align-items-center small">
+            <i class="bi bi-hdd-network me-2 text-gradient fs-5"></i>
             <a href="https://huggingface.co/nesibepekcakar" target="_blank" class="text-gradient">
                 huggingface.co/nesibepekcakar
             </a>
