--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 </div>
             </nav>
             <!-- Header-->
-            <header class="py-5">
+            <header class="pt-5 pb-3">
                 <div class="text-center mb-5">
                     <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">About  Nesibe</span></h1>
 
@@ -58,25 +58,31 @@
                 </div>
             </header>
             <!-- About Section-->
-            <section class="bg-light py-5">
+            <section class="bg-light pt-3 pb-5">
                 <div class="container px-5">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-xxl-8">
-                            <div class="text-center my-5">
-                                <p class="lead fw-light mb-4">I’ve always been drawn to intelligent systems. Long before studying engineering, I was immersed in science-fiction books filled with futuristic technologies and AI—ideas that made me genuinely excited about the world of software. When I began coding, I realized it was exactly what I enjoyed: solving problems, thinking analytically, and building something meaningful from scratch.
+                            <div class="text-center **mb-5 mt-3**">
+    <p class="lead fw-light mb-4 text-start">
+        I’ve always been drawn to **intelligent systems**. Long before studying engineering, I was immersed in science-fiction books filled with futuristic technologies and AI—ideas that made me genuinely excited about the world of software. When I began coding, I realized it was exactly what I enjoyed: solving problems, thinking analytically, and building something meaningful from scratch.
+    </p>
 
-I graduated with several academic achievements: a full scholarship, Erasmus funding, and a merit award given to only a few students each year. These accomplishments were the result of years of discipline, curiosity, and a deep love for learning. I have always believed that whatever field I choose, I can succeed through intelligence, dedication, and consistent hard work.
+    <p class="mb-4 text-start">
+        I graduated with several academic achievements: a **full scholarship**, Erasmus funding, and a merit award given to only a few students each year. These accomplishments were the result of years of discipline, curiosity, and a deep love for learning. I have always believed that whatever field I choose, I can succeed through intelligence, dedication, and consistent hard work.
+    </p>
 
-I enjoy approaching projects from both a technical and user-centered perspective—understanding what a system needs to do, researching the right tools, building a solid foundation, and expanding it feature by feature. If something can be improved, I don’t hesitate to say it. Quality and efficiency matter to me.
+    <p class="mb-4 text-start">
+        I enjoy approaching projects from both a **technical and user-centered perspective**—understanding what a system needs to do, researching the right tools, building a solid foundation, and expanding it feature by feature. If something can be improved, I don’t hesitate to say it. Quality and efficiency matter to me.
+    </p>
 
-Although I can be reserved during interviews or high-pressure situations, I excel once I begin working. My strengths appear in action: how I think, how I solve problems, and how deeply I commit to the work in front of me.
+    <p class="mb-5 text-start">
+        My **strengths appear in action**: how I think, how I solve problems, and how deeply I commit to the work in front of me. In the near future, I aim to specialize in developing software enriched with **AI**—tools and applications that make life easier, smarter, and more efficient.
+    </p>
 
-In the near future, I aim to specialize in developing software enriched with AI—tools and applications that make life easier, smarter, and more efficient. If there is one message I would want visitors to take away, it’s this:
-I am someone who loves solving problems, learning fast, and building technology that truly works.</p>
-<p class="text-muted">
-  ....
-</p>
-                            </div>
+    <p class="fw-bolder lead text-primary text-center">
+        If there is one message I would want visitors to take away, it’s this:<br>I am someone who loves solving problems, learning fast, and building technology that truly works.
+    </p>
+</div>
                         </div>
                     </div>
                 </div>
