--- a/resume.html
+++ b/resume.html
@@ -44,20 +44,21 @@
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Experience Section-->
                         <section>
-                            <div class="d-flex align-items-center justify-content-between mb-4">
-        <div class="d-flex align-items-center">
-            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
-                <i class="bi bi-briefcase"></i> 
-            </div>
-            <h3 class="fw-bolder mb-0">
-                <span class="text-gradient d-inline">Experience</span>
-            </h3>
+                            <div class="d-flex align-items-start justify-content-between **flex-column flex-sm-row** mb-4">
+    <div class="d-flex align-items-center mb-3 mb-sm-0">
+        <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
+            <i class="bi bi-briefcase"></i> 
         </div>
-        <a class="btn btn-primary px-4 py-3" href="assets\NesibeNurPekcakar_CV.pdf"target="_blank">
-            <div class="d-inline-block bi bi-download me-2"></div>
-            Download Resume
-        </a>
+        <h3 class="fw-bolder mb-0">
+            <span class="text-gradient d-inline">Experience</span>
+        </h3>
     </div>
+    
+    <a class="btn btn-primary px-4 py-3 **ms-sm-auto**" href="assets\NesibeNurPekcakar_CV.pdf" target="_blank">
+        <div class="d-inline-block bi bi-download me-2"></div>
+        Download Resume
+    </a>
+</div>
                             <!-- Experience Card 1-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
