--- a/about.html
+++ b/about.html
@@ -1,109 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Nesibe Nur Pekçakar-Home</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Custom Google font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-        <script src="js/scripts.js"></script>
-    </head>
-    <body class="d-flex flex-column h-100">
-        <main class="flex-shrink-0">
-            <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-light py-2 navbar-gradient">
-                <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Nesibe Nur Pekçakar</span></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <!-- Header-->
-            <header class="pt-5 pb-3">
-                <div class="text-center mb-5">
-                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">About  Nesibe</span></h1>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Nesibe Nur Pekçakar - About</title>
 
-                </div>
-                <div class="container px-5 pb-5">
-                    <div class="row gx-5 align-items-center">
-                        <div class="col-xxl-5">
-                            <!-- Header text content-->
-                        </div>
-                        <div class="col-xxl-7">
-                            <!-- Header profile picture-->
-                            <div class="d-flex justify-content-center mt-5 mt-xxl-0">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </header>
-            <!-- About Section-->
-            <section class="bg-light pt-3 pb-5">
-                <div class="container px-5">
-                    <div class="row gx-5 justify-content-center">
-                        <div class="col-xxl-8">
-                            <div class="text-center **mb-5 mt-3**">
-    <p class="lead fw-light mb-4 text-start">
-        I’ve always been drawn to **intelligent systems**. Long before studying engineering, I was immersed in science-fiction books filled with futuristic technologies and AI—ideas that made me genuinely excited about the world of software. When I began coding, I realized it was exactly what I enjoyed: solving problems, thinking analytically, and building something meaningful from scratch.
-    </p>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
-    <p class="mb-4 text-start">
-        I graduated with several academic achievements: a **full scholarship**, Erasmus funding, and a merit award given to only a few students each year. These accomplishments were the result of years of discipline, curiosity, and a deep love for learning. I have always believed that whatever field I choose, I can succeed through intelligence, dedication, and consistent hard work.
-    </p>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet" />
 
-    <p class="mb-4 text-start">
-        I enjoy approaching projects from both a **technical and user-centered perspective**—understanding what a system needs to do, researching the right tools, building a solid foundation, and expanding it feature by feature. If something can be improved, I don’t hesitate to say it. Quality and efficiency matter to me.
-    </p>
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
 
-    <p class="mb-5 text-start">
-        My **strengths appear in action**: how I think, how I solve problems, and how deeply I commit to the work in front of me. In the near future, I aim to specialize in developing software enriched with **AI**—tools and applications that make life easier, smarter, and more efficient.
-    </p>
+    <!-- Theme CSS -->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
 
-    <p class="fw-bolder lead text-primary text-center">
-        If there is one message I would want visitors to take away, it’s this:<br>I am someone who loves solving problems, learning fast, and building technology that truly works.
-    </p>
-</div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <!-- Footer-->
-        <footer class="bg-white py-4 mt-auto">
-            <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="fs-5">
-                        <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
-                                    <a href="https://linkedin.com/in/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a href="https://github.com/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
-                        </div>
-                 </div>
+<body class="d-flex flex-column h-100">
+<main class="flex-shrink-0">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light py-2 navbar-gradient">
+        <div class="container px-5">
+            <a class="navbar-brand fw-bold text-primary" href="index.html">Nesibe Nur Pekçakar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-semibold">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
             </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+        </div>
+    </nav>
+
+    <!-- Header -->
+    <header class="pt-5 pb-3">
+        <div class="text-center mb-4">
+            <h1 class="display-5 fw-bold mb-0">
+                <span class="text-gradient">About Nesibe</span>
+            </h1>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section class="bg-light pt-4 pb-5">
+        <div class="container px-4 px-md-5">
+            <div class="row gx-5 justify-content-center">
+                <div class="col-xxl-8">
+
+                    <div class="text-center mb-4 mt-2">
+
+                        <p class="lead fw-light mb-4 text-start fs-5">
+                            I’ve always been drawn to <strong>intelligent systems</strong>. Long before studying engineering,
+                            I was immersed in science-fiction books filled with futuristic technologies and AI—ideas that sparked
+                            a genuine excitement for the world of software.
+                        </p>
+
+                        <p class="mb-4 text-start fs-5">
+                            I graduated with several academic achievements: a <strong>full scholarship</strong>, Erasmus funding,
+                            and a merit award given to only a few students each year. These accomplishments reflect years of
+                            discipline, curiosity, and a deep love for learning.
+                        </p>
+
+                        <p class="mb-4 text-start fs-5">
+                            I approach projects from both a <strong>technical and user-centered perspective</strong>—understanding
+                            system needs, researching tools, building structures carefully, and improving where necessary.
+                            Quality and efficiency guide my work.
+                        </p>
+
+                        <p class="mb-4 text-start fs-5">
+                            My strengths appear in action: how I think, how I solve problems, and how deeply I commit to the work.
+                            I aim to specialize in developing software enriched with <strong>AI</strong>—tools that make life
+                            easier, smarter, and more efficient.
+                        </p>
+
+                        <p class="fw-bold lead text-primary text-center fs-4 mt-4">
+                            If there is one message I want visitors to take away, it’s this:<br>
+                            I love solving problems, learning fast, and building technology that truly works.
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+</main>
+
+<!-- Footer -->
+<footer class="bg-white py-4 mt-auto">
+    <div class="container px-5">
+        <div class="d-flex justify-content-center fs-2 gap-4">
+            <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient"><i class="bi bi-envelope"></i></a>
+            <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient"><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient"><i class="bi bi-github"></i></a>
+        </div>
+    </div>
+</footer>
+
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
+
+</body>
 </html>
