--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content />
         <meta name="author" content />
-        <title>Nesibe Nur Pekçakar-Contact Me</title>
+        <title>Nesibe Nur Pekçakar - Contact Me</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets\favicon.ico" />
         <!-- Custom Google font-->
@@ -118,50 +118,48 @@
 
                             </div>
                         </div>
-                        <div class="col-xxl-3"> 
-                <div class="mt-5 mt-xxl-0">
-                    <div class="contact-info p-4 rounded-4 **bg-light**">
+                    <div class="col-xxl-3"> 
+    <div class="mt-5 mt-xxl-0">
+        <div class="bg-light contact-info p-4 rounded-4 ">
 
-        <h3 class="fw-bold mb-3 text-gradient">Contact Details</h3>
+            <h3 class="fw-bold mb-3 text-gradient">Contact Details</h3>
 
-        <p class="lead fw-light mb-2 d-flex align-items-center small">
-            <i class="bi bi-envelope me-2 text-gradient fs-5"></i>
-            <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient">
-                nesibe.pekcakar@gmail.com
-            </a>
-        </p>
+            <p class="fw-light mb-2 d-flex align-items-center **fs-6** **fs-md-5**">
+                <i class="bi bi-envelope me-2 text-gradient **fs-6** **fs-md-5**"></i>
+                <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient">
+                    nesibe.pekcakar@gmail.com
+                </a>
+            </p>
 
-        <p class="lead fw-light mb-2 d-flex align-items-center small">
-            <i class="bi bi-telephone me-2 text-gradient fs-5"></i>
-            +905384709269
-        </p>
+            <p class="fw-light mb-2 d-flex align-items-center **fs-6** **fs-md-5**">
+                <i class="bi bi-telephone me-2 text-gradient **fs-6** **fs-md-5**"></i>
+                +905384709269
+            </p>
 
-        <p class="lead fw-light mb-2 d-flex align-items-center small">
-            <i class="bi bi-linkedin me-2 text-gradient fs-5"></i>
-            <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient">
-                linkedin.com/in/nesibepekcakar
-            </a>
-        </p>
+            <p class="fw-light mb-2 d-flex align-items-center **fs-6** **fs-md-5**">
+                <i class="bi bi-linkedin me-2 text-gradient **fs-6** **fs-md-5**"></i>
+                <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient">
+                    linkedin.com/in/nesibepekcakar
+                </a>
+            </p>
 
-        <p class="lead fw-light mb-2 d-flex align-items-center small">
-            <i class="bi bi-github me-2 text-gradient fs-5"></i>
-            <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient">
-                github.com/nesibepekcakar
-            </a>
-        </p>
+            <p class="fw-light mb-2 d-flex align-items-center **fs-6** **fs-md-5**">
+                <i class="bi bi-github me-2 text-gradient **fs-6** **fs-md-5**"></i>
+                <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient">
+                    github.com/nesibepekcakar
+                </a>
+            </p>
 
-        <p class="lead fw-light mb-2 d-flex align-items-center small">
-            <i class="bi bi-hdd-network me-2 text-gradient fs-5"></i>
-            <a href="https://huggingface.co/nesibepekcakar" target="_blank" class="text-gradient">
-                huggingface.co/nesibepekcakar
-            </a>
-        </p>
+            <p class="fw-light mb-2 d-flex align-items-center **fs-6** **fs-md-5**">
+                <i class="bi bi-hdd-network me-2 text-gradient **fs-6** **fs-md-5**"></i>
+                <a href="https://huggingface.co/nesibepekcakar" target="_blank" class="text-gradient">
+                    huggingface.co/nesibepekcakar
+                </a>
+            </p>
 
-    </div>
+        </div>
+    </div>
 </div>
-
-
-                            </div>
                     </div>
                 </div>
                 
