--- a/about.html
+++ b/about.html
@@ -46,56 +46,84 @@
     </nav>
 
     <!-- Header -->
-    <header class="pt-5 pb-3">
-        <div class="text-center mb-4">
-            <h1 class="display-5 fw-bold mb-0">
-                <span class="text-gradient">About Nesibe</span>
-            </h1>
-        </div>
-    </header>
+<header class="pt-4 pb-2">
+    <div class="text-center mb-2">
+        <h1 class="display-5 fw-bold mb-0">
+            <span class="text-gradient d-inline">About Nesibe</span>
+        </h1>
+    </div>
+</header>
+
 
     <!-- About Section -->
     <section class="bg-light pt-4 pb-5">
-        <div class="container px-4 px-md-5">
-            <div class="row gx-5 justify-content-center">
-                <div class="col-xxl-8">
+    <div class="container px-4 px-md-5">
+        <div class="row gx-5 justify-content-center">
+            <div class="col-xl-10">
 
-                    <div class="text-center mb-4 mt-2">
+                <div class="row g-4 align-items-start">
 
-                        <p class="lead fw-light mb-4 text-start fs-5">
-                            I’ve always been drawn to <strong>intelligent systems</strong>. Long before studying engineering,
-                            I was immersed in science-fiction books filled with futuristic technologies and AI—ideas that sparked
-                            a genuine excitement for the world of software.
-                        </p>
+                    <!-- LEFT SIDE PROFILE CARD -->
+                    <div class="col-lg-4">
+                        <div class="card shadow-sm border-0 rounded-4 p-4 text-center">
+                            <img src="assets/profile.jpg" 
+                                 alt="Profile Photo"
+                                 class="img-fluid rounded-4 shadow-sm mb-3">
 
-                        <p class="mb-4 text-start fs-5">
-                            I graduated with several academic achievements: a <strong>full scholarship</strong>, Erasmus funding,
-                            and a merit award given to only a few students each year. These accomplishments reflect years of
-                            discipline, curiosity, and a deep love for learning.
-                        </p>
+                            <h4 class="fw-bold mb-1 text-gradient">Nesibe Nur Pekçakar</h4>
+                            <p class="text-muted small mb-3">Computer Engineer</p>
 
-                        <p class="mb-4 text-start fs-5">
-                            I approach projects from both a <strong>technical and user-centered perspective</strong>—understanding
-                            system needs, researching tools, building structures carefully, and improving where necessary.
-                            Quality and efficiency guide my work.
-                        </p>
+                            <div class="d-flex justify-content-center gap-3 fs-4">
+                                <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient"><i class="bi bi-envelope"></i></a>
+                                <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient"><i class="bi bi-linkedin"></i></a>
+                                <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient"><i class="bi bi-github"></i></a>
+                            </div>
+                        </div>
+                    </div>
 
-                        <p class="mb-4 text-start fs-5">
-                            My strengths appear in action: how I think, how I solve problems, and how deeply I commit to the work.
-                            I aim to specialize in developing software enriched with <strong>AI</strong>—tools that make life
-                            easier, smarter, and more efficient.
-                        </p>
+                    <!-- RIGHT SIDE ABOUT TEXT CARD -->
+                    <div class="col-lg-8">
+                        <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5">
 
-                        <p class="fw-bold lead text-primary text-center fs-4 mt-4">
-                            If there is one message I want visitors to take away, it’s this:<br>
-                            I love solving problems, learning fast, and building technology that truly works.
-                        </p>
+                            <p class="lead fw-light mb-4 fs-5 text-start">
+                                I’ve always been drawn to <strong>intelligent systems</strong>. Long before studying engineering,
+                                I was immersed in science-fiction books filled with futuristic technologies and AI—ideas that
+                                sparked a genuine excitement for the world of software.
+                            </p>
+
+                            <p class="mb-4 fs-5 text-start">
+                                I graduated with several academic achievements: a <strong>full scholarship</strong>, Erasmus funding,
+                                and a merit award given to only a few students each year. These accomplishments reflect years of
+                                discipline, curiosity, and a deep love for learning.
+                            </p>
+
+                            <p class="mb-4 fs-5 text-start">
+                                I approach projects from both a <strong>technical and user-centered perspective</strong>—
+                                understanding system needs, researching tools, building structures carefully, and improving where
+                                necessary. Quality and efficiency guide my work.
+                            </p>
+
+                            <p class="mb-4 fs-5 text-start">
+                                My strengths appear in action: how I think, how I solve problems, and how deeply I commit to the work.
+                                I aim to specialize in developing software enriched with <strong>AI</strong>—tools that make life
+                                easier, smarter, and more efficient.
+                            </p>
+
+                            <p class="fw-bold lead text-primary text-center fs-4 mt-4">
+                                If there is one message I want visitors to take away, it’s this:<br>
+                                I love solving problems, learning fast, and building technology that truly works.
+                            </p>
+
+                        </div>
                     </div>
 
                 </div>
+
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
 </main>
 
