--- a/resume.html
+++ b/resume.html
@@ -44,21 +44,28 @@
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Experience Section-->
                         <section>
-                            <div class="d-flex flex-column flex-md-row align-items-md-center mb-3 mb-sm-0">
-    <a class="btn btn-primary px-4 py-3 mb-3 mb-md-0 me-md-4 order-1 order-md-2" href="assets\NesibeNurPekcakar_CV.pdf" target="_blank">
-        <div class="d-inline-block bi bi-download me-2"></div>
-        Download Resume
-    </a>
-    
-    <div class="d-flex align-items-center order-2 order-md-1">
-        <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
-            <i class="bi bi-briefcase"></i> 
-        </div>
-        <h3 class="fw-bolder mb-0">
-            <span class="text-gradient d-inline">Experience</span>
-        </h3>
-    </div>
+                            <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-between mb-4">
+    
+    <!-- Download button - appears ABOVE on mobile -->
+    <a class="btn btn-primary px-4 py-3 order-1 order-md-2 mb-3 mb-md-0"
+       href="assets/NesibeNurPekcakar_CV.pdf"
+       target="_blank">
+        <div class="d-inline-block bi bi-download me-2"></div>
+        Download Resume
+    </a>
+
+    <!-- Experience title - appears BELOW on mobile -->
+    <div class="d-flex align-items-center order-2 order-md-1">
+        <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
+            <i class="bi bi-briefcase"></i> 
+        </div>
+        <h3 class="fw-bolder mb-0">
+            <span class="text-gradient d-inline">Experience</span>
+        </h3>
+    </div>
+
 </div>
+
                             <!-- Experience Card 1-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
