--- a/about.html
+++ b/about.html
@@ -56,56 +56,53 @@
 
 
     <!-- About Section -->
-    <section class=" pt-4 pb-5">
+   <!-- About Section -->
+<section class="pt-4 pb-5">
     <div class="container px-4 px-md-5">
-        <div class="row gx-5 justify-content-center">
-            <div class="col-xl-10">
 
-                <div class="row g-4 align-items-start">
+        <!-- Center the whole content -->
+        <div class="row justify-content-center">
+            <div class="col-xl-9 col-lg-10">
 
-                    
-                    <!-- RIGHT SIDE ABOUT TEXT CARD -->
-                    <div class="bg-light col-lg-8">
-                        <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5">
+                <!-- Main Card -->
+                <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5 text-center">
 
-                            <p class="lead fw-light mb-4 fs-5 text-start">
-                                I’ve always been drawn to <strong>intelligent systems</strong>. Long before studying engineering,
-                                I was immersed in science-fiction books filled with futuristic technologies and AI—ideas that
-                                sparked a genuine excitement for the world of software.
-                            </p>
+                    <h2 class="fw-bold text-gradient mb-4">Who I Am</h2>
 
-                            <p class="mb-4 fs-5 text-start">
-                                I graduated with several academic achievements: a <strong>full scholarship</strong>, Erasmus funding,
-                                and a merit award given to only a few students each year. These accomplishments reflect years of
-                                discipline, curiosity, and a deep love for learning.
-                            </p>
+                    <p class="lead fw-light mb-4 fs-5 text-start mx-auto" style="max-width: 800px;">
+                        I’ve always been drawn to <strong>intelligent systems</strong>. Long before studying
+                        engineering, I was immersed in science-fiction books filled with futuristic technologies
+                        and AI—ideas that sparked a genuine excitement for the world of software.
+                    </p>
 
-                            <p class="mb-4 fs-5 text-start">
-                                I approach projects from both a <strong>technical and user-centered perspective</strong>—
-                                understanding system needs, researching tools, building structures carefully, and improving where
-                                necessary. Quality and efficiency guide my work.
-                            </p>
+                    <p class="mb-4 fs-5 text-start mx-auto" style="max-width: 800px;">
+                        I graduated with several academic achievements: a <strong>full scholarship</strong>,
+                        Erasmus funding, and a merit award given to only a few students each year. These accomplishments
+                        reflect years of discipline, curiosity, and a deep love for learning.
+                    </p>
 
-                            <p class="mb-4 fs-5 text-start">
-                                My strengths appear in action: how I think, how I solve problems, and how deeply I commit to the work.
-                                I aim to specialize in developing software enriched with <strong>AI</strong>—tools that make life
-                                easier, smarter, and more efficient.
-                            </p>
+                    <p class="mb-4 fs-5 text-start mx-auto" style="max-width: 800px;">
+                        I approach projects from both a <strong>technical and user-centered perspective</strong>—
+                        understanding system needs, researching tools, building structures carefully, and improving
+                        where necessary. Quality and efficiency guide my work.
+                    </p>
 
-                            <p class="fw-bold lead text-primary text-center fs-4 mt-4">
-                                If there is one message I want visitors to take away, it’s this:<br>
-                                I love solving problems, learning fast, and building technology that truly works.
-                            </p>
+                    <p class="mb-4 fs-5 text-start mx-auto" style="max-width: 800px;">
+                        My strengths appear in action: how I think, how I solve problems, and how deeply I commit
+                        to the work. I aim to specialize in developing software enriched with <strong>AI</strong>—
+                        tools that make life easier, smarter, and more efficient.
+                    </p>
 
-                        </div>
-                    </div>
+                    <p class="fw-bold lead text-primary fs-4 mt-4">
+                        I love solving problems, learning fast, and building technology that truly works.
+                    </p>
 
                 </div>
-
             </div>
         </div>
     </div>
 </section>
+
 
 
 </main>
