about section improved

--- a/about.html
+++ b/about.html
@@ -55,55 +55,88 @@
 </header>
 
 
-    <!-- About Section -->
    <!-- About Section -->
 <section class="pt-4 pb-5">
-    <div class="container px-4 px-md-5">
+    <div class="bg-light px-4 px-md-5">
 
-        <!-- Center the whole content -->
         <div class="row justify-content-center">
             <div class="col-xl-9 col-lg-10">
 
-                <!-- Main Card -->
+                <!-- MAIN ABOUT CARD -->
                 <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5 text-center">
 
-                    <h2 class="fw-bold text-gradient mb-4">Who I Am</h2>
+                    <h2 class="fw-bold text-gradient mb-4">About Me</h2>
 
-                    <p class="lead fw-light mb-4 fs-5 text-start mx-auto" style="max-width: 800px;">
-                        I’ve always been drawn to <strong>intelligent systems</strong>. Long before studying
-                        engineering, I was immersed in science-fiction books filled with futuristic technologies
-                        and AI—ideas that sparked a genuine excitement for the world of software.
+                    <!-- Shortened Intro -->
+                    <p class="fs-5 text-start mx-auto" style="max-width: 800px;">
+                        I’ve always been drawn to <strong>software and artificial intelligence</strong>. Science-fiction and futuristic 
+                        technologies sparked my curiosity long before I studied engineering.
                     </p>
 
-                    <p class="mb-4 fs-5 text-start mx-auto" style="max-width: 800px;">
-                        I graduated with several academic achievements: a <strong>full scholarship</strong>,
-                        Erasmus funding, and a merit award given to only a few students each year. These accomplishments
-                        reflect years of discipline, curiosity, and a deep love for learning.
+                    <p class="fs-5 text-start mx-auto" style="max-width: 800px;">
+                        During my studies, I earned a <strong>full scholarship</strong>, <strong>Erasmus funding</strong>, 
+                        and a <strong>merit award</strong>. These represent the discipline and passion I bring to my work.
                     </p>
 
-                    <p class="mb-4 fs-5 text-start mx-auto" style="max-width: 800px;">
-                        I approach projects from both a <strong>technical and user-centered perspective</strong>—
-                        understanding system needs, researching tools, building structures carefully, and improving
-                        where necessary. Quality and efficiency guide my work.
+                    <p class="fs-5 text-start mx-auto" style="max-width: 800px;">
+                        I focus on building systems that are <strong>practical, user-centered, and technically solid</strong>. 
+                        Quality, clarity, and thoughtful execution guide every project I develop.
                     </p>
 
-                    <p class="mb-4 fs-5 text-start mx-auto" style="max-width: 800px;">
-                        My strengths appear in action: how I think, how I solve problems, and how deeply I commit
-                        to the work. I aim to specialize in developing software enriched with <strong>AI</strong>—
-                        tools that make life easier, smarter, and more efficient.
-                    </p>
-
+                    <!-- Strong Personal Sentence -->
                     <p class="fw-bold lead text-primary fs-4 mt-4">
-                        I love solving problems, learning fast, and building technology that truly works.
+                        I love solving problems, learning fast, and creating technology that genuinely works.
+                    </p>
+                </div>
+
+                <!-- HOBBIES SECTION -->
+                <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5 text-center mt-4">
+                    <h3 class="fw-bold text-gradient mb-3">Hobbies</h3>
+                    <p class="fs-5 mb-3">
+                        Outside of engineering, I enjoy activities that expand my creativity and keep me grounded.
                     </p>
 
+                    <ul class="list-unstyled fs-5">
+                        <li class="mb-2"><i class="bi bi-star-fill text-primary me-2"></i>Reading books especially science-fiction </li>
+                        <li class="mb-2"><i class="bi bi-star-fill text-primary me-2"></i>Exploring new AI tools & building small experiments</li>
+<li class="mb-2"><i class="bi bi-star-fill text-primary me-2"></i>Expanding my knowledge in sociology and philosophy</li>
+                        <li class="mb-2"><i class="bi bi-star-fill text-primary me-2"></i>Watching and analyzing films</li>
+                    </ul>
                 </div>
+
+                <!-- FAVORITES SECTION -->
+                <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5 text-center mt-4">
+                    <h3 class="fw-bold text-gradient mb-3">Favorites</h3>
+
+                    <div class="row text-start mx-auto" style="max-width: 800px;">
+
+                        <!-- Movies -->
+                        <div class="col-md-6 mb-4">
+                            <h5 class="fw-bold text-primary mb-2">Movies/TV Series</h5>
+                            <ul class="list-unstyled fs-5 mb-0">
+                                <li class="mb-1">• Westworld</li>
+                                <li class="mb-1">• Suspria</li>
+                                <li class="mb-1">• Arrival</li>
+                            </ul>
+                        </div>
+
+                        <!-- Books -->
+                        <div class="col-md-6 mb-4">
+                            <h5 class="fw-bold text-primary mb-2">Books</h5>
+                            <ul class="list-unstyled fs-5 mb-0">
+                                <li class="mb-1">• Dune</li>
+                                <li class="mb-1">• Frankenstein</li>
+                                <li class="mb-1">• Notes from Underground</li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
 </section>
-
-
 
 </main>
 
