--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,9 @@
                 </div>
                 <h1 class="fw-bolder">Let's get in touch</h1>
             </div>
+
+             
+                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
             <p class="lead fw-light mb-2 d-flex align-items-center small">
                 <i class="bi bi-envelope me-2 text-gradient fs-5"></i>
                 <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient">
@@ -82,6 +85,8 @@
                     /nesibepekcakar
                 </a>
             </p>
+            </div>
+
 
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8 col-xl-6">
