--- a/about.html
+++ b/about.html
@@ -65,17 +65,16 @@
                 <!-- MAIN ABOUT CARD -->
                 <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5 text-center">
 
-                    <h2 class="fw-bold text-gradient mb-4">About Me</h2>
-
                     <!-- Shortened Intro -->
                     <p class="fs-5 text-start mx-auto" style="max-width: 800px;">
-                        I’ve always been drawn to <strong>software and artificial intelligence</strong>. Science-fiction and futuristic 
-                        technologies sparked my curiosity long before I studied engineering.
+                        I’ve always been drawn to <strong>software and artificial intelligence</strong>. Through the science-fiction books and movies/tv-series I have consumed
+                        these fields sparked my curiosity long before I studied engineering. I dreamt of taking part of the future technologies.
                     </p>
 
                     <p class="fs-5 text-start mx-auto" style="max-width: 800px;">
-                        During my studies, I earned a <strong>full scholarship</strong>, <strong>Erasmus funding</strong>, 
-                        and a <strong>merit award</strong>. These represent the discipline and passion I bring to my work.
+                        During my studies as a computer engineering student, I earned a <strong>full scholarship</strong> for my education, <strong>Erasmus funding</strong>, 
+                        and a <strong>merit award</strong> which is given 3 students in the department every year.
+                        These represent the discipline and passion I bring to my work and also my dedication to my field of study.
                     </p>
 
                     <p class="fs-5 text-start mx-auto" style="max-width: 800px;">
@@ -85,7 +84,7 @@
 
                     <!-- Strong Personal Sentence -->
                     <p class="fw-bold lead text-primary fs-4 mt-4">
-                        I love solving problems, learning fast, and creating technology that genuinely works.
+                        I love engineering, solving problems, learning, and creating technology that genuinely works.
                     </p>
                 </div>
 
@@ -112,11 +111,12 @@
 
                         <!-- Movies -->
                         <div class="col-md-6 mb-4">
-                            <h5 class="fw-bold text-primary mb-2">Movies/TV Series</h5>
+                            <h5 class="fw-bold text-primary mb-2">Movies</h5>
                             <ul class="list-unstyled fs-5 mb-0">
                                 <li class="mb-1">• Westworld</li>
-                                <li class="mb-1">• Suspria</li>
-                                <li class="mb-1">• Arrival</li>
+                                <li class="mb-1">• Blade Runner</li>
+                                <li class="mb-1">• Terminator</li>
+                                <li class="mb-1">• Lord Of The Rings</li>
                             </ul>
                         </div>
 
@@ -127,6 +127,7 @@
                                 <li class="mb-1">• Dune</li>
                                 <li class="mb-1">• Frankenstein</li>
                                 <li class="mb-1">• Notes from Underground</li>
+                                <li class="mb-1">• Do Androids Dream of Electric Sheep?</li>
                             </ul>
                         </div>
 
